public/stylesheets/cypress.css
/* ... */
section#patient_nqf table td:first-child { background: none; }
section#patient_nqf table thead tr th {
  text-align: left;
  border-bottom: none;
}
section#patient_nqf table td { padding: 0 4px; }
section#patient_nqf table td.p { background: url(/images/included.png) 25% 25% no-repeat; }
section#patient_nqf table td.f { background: url(/images/fail.png) 25% 25% no-repeat; }
section#patient_nqf table tr td {
  font-size: 80%;
  padding: 0;
  margin: 0;
  text-align: center;
  height: 1em;
  width: 1.4em;
  width: 5px;
}
section#patient_nqf table tr td:first-child {
  padding: 0 5px 0 0px;
  text-align: left;
  text-align: right;
  width: 4em;
}
section#patient_nqf table img { margin-top: 3px; }
div#effectiveDate {
  text-align: center;
  font-style: italic;
  position: relative;
  bottom: 5px;
}
section#patient_characteristics {
  width: 800px;
  vertical-align: top;
  margin-bottom: 40px;
  margin-left: 150px;
}
section#patient_characteristics table { width: 800px; }
section#patient_characteristics table tr th {
  background-color: #f0f0f0;
  color: #333333;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 85%;
}
section#patient_characteristics table td {
  padding: 0 4px;
  text-align: left;
}
section#patient_characteristics table tr td:last-child { text-align: right; }
section#patient_characteristics table tr td:nth-child(2) { width: 66%; }
section#patient_characteristics table tbody tr:last-child td { padding-bottom: 1em; }
section#patient_characteristics table td.reason {
  text-align: right;
  font-style: italic;
  font-size: 90%;
}
section#patient_characteristics table td.val { font-weight: bold; }
section#patient_characteristics table td em { font-weight: bold; }
section#patient_characteristics table tbody tr:last-child td { padding-bottom: 20px; }
section#patient_list {
  display: inline-block;
  vertical-align: top;
  width: 800px;
  margin-top: 30px;
}
section#patient_list table#patient_subset {
  margin-top: 25px;
  width: 850px;
}
section#patient_list table#patient_subset th { text-align: left; }
section#patient_list table#patient_subset th:nth-child(9) { text-align: center; }
section#patient_list section.measure dd { width: 500px; }
section#patient_list section.measure th {
  text-align: left;
  width: 3em;
}
section#patient_list input.search { margin-top: 15px; }
div.tabs {
  margin-top: 20px;
  margin-right: 20px;
  width: 90px;
  text-align: right;
  display: inline-block;
}
div.tabs ul {
  border-right: 1px solid #dddddd;
  list-style: none;
}
div.tabs li { text-align: right; }
div.tabs a.selected {
  text-decoration: none;
  background-color: green;
  font-weight: bold;
  color: white;
  border-color: green;
}
div.tabs a {
  -moz-border-radius: 8px 0 0 8px;
  -webkit-border-radius: 8px 0 0 8px;
  border-radius: 8px 0 0 8px;
  behavior: url(js/PIE.htc);
  border: 1px solid #cccccc;
  border-right: none;
  display: block;
  margin: 0 0 2px 0;
  text-decoration: none;
  color: #555555;
  background-color: #ffffff;
  padding: 5px 10px 3px 10px;
}
section.ctb_records dl { line-height: 2.54em; }
section caption {
  font-weight: bold;
  text-transform: uppercase;
}
section#ehr_results {
  margin-bottom: 40px;
  border-top: 1px solid #cccccc;
}
section#ehr_results table thead tr th { text-align: left; }
section#ehr_results table tr:first-child th {
  text-transform: uppercase;
  border-bottom: 1px solid #cccccc;
}
section#ehr_results table thead tr th:nth-child(2) { text-align: center; }
section#ehr_results table thead tr th:nth-child(3) { text-align: right; }
section#ehr_results table thead tr th:nth-child(4) { text-align: right; }
section#ehr_results table thead tr th:nth-child(5) { text-align: right; }
section#ehr_results table tr td:nth-child(3) { text-align: center; }
section#ehr_results table tr td:nth-child(4) { text-align: right; }
section#ehr_results table tr td:nth-child(5) { text-align: left; }
section#ehr_results table tr td:nth-child(6) { text-align: right; }
section#ehr_results table tbody.fail td:nth-child(2) a { color: red; }
section#ehr_results table tbody.fail td span.f { color: red; }
section#ehr_results table tbody.pass td:nth-child(2) a { color: green; }
section#ehr_results th.failing {
  color: red;
  font-weight: bold;
  padding: 10px 0;
}
section#ehr_results th.passing {
  color: green;
  font-weight: bold;
  padding: 20px 0 10px;
}
footer#ccattribution {
  clear: left;
  text-align: right;
  font-size: 0.8em;
}
footer#ccattribution img {
  margin: 0 5px 0 20px;
  vertical-align: middle;
}
form.simple_form span { display: block; }
form.button_to div { display: inline; }
form.button_to { display: inline; }

section.free-text dt{
	font-weight:bold;
}

section.free-text dd{
	padding:5px;
}

